[package]
name = "pickle-rick"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde-pickle = "1.0"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "channel-api"]
